[tool.poetry]
name = "arq-scale-test"
version = "0.1.0"
description = ""
authors = ["rm-21 <mittalrishabh181@gmail.com>"]
readme = "README.md"
packages = [{include = "arq_scale_test"}]

[tool.poetry.dependencies]
python = "3.11.3"
arq = "^0.25.0"
pydantic = {extras = ["dotenv"], version = "^1.10.8"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"
ruff = "^0.0.270"
reorder-python-imports = "^3.9.0"
pre-commit = "^3.3.2"

[tool.pyright]
reportGeneralTypeIssues = false
reportPrivateUsage = false
reportMissingTypeStubs = false
reportFunctionMemberAccess = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false

[tool.mypy]
plugins = ["pydantic.mypy"]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
implicit_reexport = false
disallow_untyped_defs = true
follow_imports = 'silent'

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry=1.4.2"]
build-backend = "poetry.core.masonry.api"
